# PyGim

./: README.md  build.sh  inference.py  spmm_test.py
Libs/: install_libs.sh
backend_pim/: grande.py  spmm.py  spmv.py
backend_pim/spmm_default/: CMakeLists.txt  dpu.cmake  ops.hpp  pytorch_api.cpp  spmm.h  spmm_mul_csr.c
backend_pim/spmm_default/dpu_kernels/: CMakeLists.txt  mul_csr_group.c
backend_pim/spmm_default/support/: common.h  matrix.h  partition.h
backend_pim/spmm_grande/: CMakeLists.txt  dpu.cmake  ops.hpp  pytorch_api.cpp  spmm.h  spmm_mul_coo.c  spmm_mul_csr.c  utils.hpp
backend_pim/spmm_grande/dpu_kernels/: spmm_grande_mul_csr_dpu.c  spmm_mul_csr_dpu.c
backend_pim/spmm_grande/support/: common.h  matrix.h  params.h
backend_pim/spmm_multigroup/: CMakeLists.txt  dpu.cmake  mul_coo_multigroup.c  mul_csr_multigroup.c  ops.hpp  parse_results.py  pytorch_api.cpp  spmm.h
backend_pim/spmm_multigroup/dpu_kernels/: mul_coo_multigroup_dpu.c
backend_pim/spmm_multigroup/support/: common.h  cyclecount.h  partition.c  timer.c  timer.h
backend_pim/spmv_sparseP/: CMakeLists.txt  build.sh  ops.hpp  parse_results.py  pytorch_api.cpp  spmm.h  spmv_mul_coo.c  utils.hpp
backend_pim/spmv_sparseP/dpu_kernels/: CMakeLists.txt  spmv_mul_coo_dpu.c
backend_pim/spmv_sparseP/support/: common.h  matrix.h  params.h  partition.c  partition.h  timer.h
models/: models.py  pyg_gcn_conv.py  pyg_gin_conv.py  pyg_sage_conv.py  quantize.py
utils/: autotuner.py  configs.py  experiment.py  helpers.py  space.py
